[package]
name = "type_erase"
version = "0.1.0"
authors = ["gwy15 <gwy15thu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "macros"] }

[dev-dependencies]
mockall = "0.9.1"
